[package]
name = "megaphone"
version = "0.2.0"
authors = [
  "jrconlin <me+crypt@jrconlin.com>",
  "Philip Jenvey <pjenvey@underboss.org>",
]
edition = "2021"

[dependencies]
backtrace = { version = "0.3" }
cadence = { version = "0.29" }
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
diesel_migrations = { version = "1.4.0", features = ["mysql"] }
lazy_static = "1.4.0"
mozsvc-common = "0.2"
regex = "1.4"
rocket = "0.4"
rocket_contrib = "0.4"
serde = "1.0"
serde_json = "1.0"
# pin to 0.19: https://github.com/getsentry/sentry-rust/issues/277
sentry = { version = "0.31"}
sentry-failure = "0.21"
sentry-slog="0.31"
# 0.21 sentry stuff (if we can figure out how to get it to talk to the site.)
# sentry-core = {version = "0.21", features=["client"]}
# sentry = { version = "0.21"}
# sentry-slog="0.21"
slog = { version = "2.7", features = ["nested-values"] }
slog-async = { version = "2.5", features = ["nested-values"] }
slog_derive = "0.2.0"
slog-mozlog-json = "0.1.0"
slog-term = "2.6"
thiserror = "1.0"
# must match the toml (minor) version rocket depends on
toml = "0.7"
