[package]
name = "megaphone"
version = "0.3.0"
authors = [
  "jrconlin <me+crypt@jrconlin.com>",
  "Philip Jenvey <pjenvey@underboss.org>",
]
edition = "2021"

[dependencies]
backtrace = { version = "0.3" }
cadence = { version = "0.29" }
# Note: diesel 2+ requires extensive modifications
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
diesel_migrations = { version = "1.4.0", features = ["mysql"] }
lazy_static = "1.4.0"
mozsvc-common = "0.2"
regex = "1.4"
rocket = "0.4" # Note: rocket 0.5+ requires extensive modifications
rocket_contrib = "0.4"
serde = "1.0"
serde_json = "1.0"
sentry = { version = "0.31"}
sentry-slog="0.31"
slog = { version = "2.7", features = ["nested-values"] }
slog-async = { version = "2.5", features = ["nested-values"] }
slog_derive = "0.2.0"
slog-mozlog-json = "0.1.0"
slog-term = "2.6"
thiserror = "1.0"

openssl-sys = "0.9"
openssl = "0.10"